fix: live updater picking the wrong match to update